# ai-website-audit

./: .dockerignore  .gitignore  Dockerfile  IMPLEMENT_UNKNOWN_STATUS.md  README.md  add_all_questions.py  add_questions_from_csv.py  alembic.ini  audit_evaluator.py  awareness_rating_example.html  bar_chart_data_example.js  bar_chart_example.html  docker-compose.yml  generate_pdf_for_session.py  generate_pdf_script.py  get_questions_by_page_type.py  import_questions.py  promp.txt  pyproject.toml  report_viewer.html  run_audit.py  run_nav.py  run_nav_docker.sh  sample.env  score_calculations.js  test.html
api/: auth.py  db.py  job_queue.py  main.py  pyproject.toml  queue.py  requirements.txt  schemas.py
api/repositories/: audit_repository.py
api/routes/: audits.py
api/services/: audit_service.py
api/tests/: conftest.py  test_audits.py
docs/: API_EXAMPLES.md  DEVELOPER_GUIDE.md  PDF_GENERATION.md  QUICK_REFERENCE.md  README.md  (+6 more)
worker/: __init__.py  artifacts.py  checkout_flow.py  cleanup.py  constants.py  crawl.py  crawl_runner.py  db.py  ecom_navigator.py  error_summary.py  excel_rubric.py  html_analysis.py  jobs.py  locking.py  low_confidence.py  main.py  orchestrator.py  pdf_generator.py  pdf_report.py  pdp_discovery.py  pyproject.toml  report_generator.py  repository.py  requirements.txt  session_status.py  stage_summary_generator.py  storage.py  storefront_report_card.py
worker/crawl/: __init__.py  blocked_page.py  browser.py  consent.py  constants.py  features.py  navigation_retry.py  pdp_candidates.py  pdp_validation.py  popup_rules.py  readiness.py  text.py
worker/templates/: base.html
worker/tests/: test_blocked_page.py  test_consent.py  test_excel_rubric_artifact.py  test_extraction_retry.py  test_locking.py  test_low_confidence.py  test_navigation_retry.py  test_pdp_candidates.py  test_pdp_low_confidence.py  test_pdp_parse.py  test_pdp_validation.py  test_popup_rules.py  test_readiness.py  test_retention_cleanup.py  test_session_log_artifact.py  test_session_status.py  test_storage.py
(+42 files in other folders)
