[project]
name = "ai-website-audit"
version = "0.1.0"
description = "AI-powered website audit – scaffolding and shared foundations."
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "AI Website Audit" }]

[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"migrations/*.py" = ["E501"]
"migrations/versions/*.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["shared", "api", "worker"]

[tool.pytest.ini_options]
testpaths = ["api/tests", "worker/tests"]
