[project]
name = "ai-website-audit-api"
version = "0.1.0"
description = "FastAPI orchestration service for the AI Website Audit project."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.32.0,<0.33.0",
    "structlog>=24.0.0,<25.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "SQLAlchemy>=2.0.0,<3.0.0",
    "alembic>=1.13.0,<2.0.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "rq>=1.15.0,<2.0.0",
    "redis>=5.0.0,<6.0.0",
]

[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

