[project]
name = "ai-website-audit-worker"
version = "0.1.0"
description = "Playwright-based worker service for the AI Website Audit project."
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.49.0,<2.0.0",
    "structlog>=24.0.0,<25.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "rq>=1.15.0,<2.0.0",
    "redis>=5.0.0,<6.0.0",
    "SQLAlchemy>=2.0.0,<3.0.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
]

[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

